src/snapshot_middleware/snapshots/librojo__snapshot_middleware__json_model__test__model_from_vfs_legacy.snap
---
source: src/snapshot_middleware/json_model.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.model.json
  relevant_paths:
    - /foo.model.json
  context: {}
name: foo
class_name: IntValue
properties:
  Value:
    Int64: 5
children:
  - snapshot_id: ~
    metadata:
      ignore_unknown_instances: false
      relevant_paths: []
      context: {}
    name: The Child
    class_name: StringValue
    properties: {}
    children: []
    ignore_children: false
ignore_children: false

